src/components/Store.css
#Store {
	width: 100%;
	overflow: hidden;
	margin: 0;
	display: flex;
	flex-flow: row;
	align-items: stretch;
}

.connectInfo {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background-color: rgba(0, 0, 0, 0.95);
	z-index: 100;
	display: flex;
	justify-items: center;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.title {
	box-sizing: border-box;
	font-size: 2.5em;
	text-align: center;
	margin-top: 15px;
}
.description {
	font-family: var(--readable);
	font-size: 1em;
	text-align: center;
	margin-top: 15px;
	margin-bottom: 15px;
}
.storeContainer {
	width: 100%;
	height: 100%;
	margin-top: 100px;
	padding: 50px;
}
ul {
	display: flex;
	align-content: center;
	justify-content: center;
	list-style: none;
	flex-direction: row;
	flex-wrap: wrap;
}
li {
	width: 20%;
	min-width: 150px;
	height: 180px;
	overflow: hidden;
	background-color: var(--secondary);
	margin: 15px;
	flex-shrink: 0;
	font-family: var(--readable);
	cursor: pointer;
	transition: all .3s ease-in-out;
}
li:hover {
	-webkit-box-shadow: 6px 6px 25px 0 rgba(128,128,128,1);
	-moz-box-shadow: 6px 6px 25px 0 rgba(128,128,128,1);
	box-shadow: 6px 6px 25px 0 rgba(128,128,128,1);
	height: 350px;
	transform: translate3d(-5px, -5px, 0px);
}
.skillInfos {
	width: 100%;
	height: 225px;
	box-sizing: border-box;
	perspective: 1000px;
}
.skillInfosInner {
	position: relative;
	width: 100%;
	height: 100%;
	text-align: center;
	transition: transform 0.8s;
	transform-style: preserve-3d;
}
.skillInfos:hover .skillInfosInner {
	transform: rotateY(180deg);
}
.cardFront, .cardBack {
	position: absolute;
	width: 100%;
	height: 225px;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	padding-left: 15px;
	padding-right: 15px;
	box-sizing: border-box;
}
.cardBack {
	transform: rotateY(180deg);
}
.skillTechInfo {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	display: flex;
	padding: 15px;
	box-sizing: border-box;
}
.skillAuthor {
	width: 50%;
	cursor: pointer;
	text-align: left;
}
.skillAuthor:hover {
	text-decoration: underline;
}
.skillDownload, .skillConnectToDownload {
	width: 50%;
	text-align: right;
	font-family: var(--readable);
	font-size: 0.75em;
}
.skillDownload:hover, .skillConnectToDownload:hover, .button:hover, .connector:hover, .acceptCookies:hover, .noCookies:hover, .menuLink:hover {
	color: var(--hover);
	cursor: pointer;
}
.acceptCookies:hover {
	text-decoration: underline;
}
.button {
	margin-bottom: 25px;
	cursor: pointer;
}
.skillIcon {
	width: 100%;
	text-align: center;
	font-size: 5em;
	display: flex;
	align-content: center;
	justify-content: center;
	align-items: center;
	height: 125px;
	background-color: var(--mainBG);
}
.skillName {
	width: 100%;
	text-align: center;
	font-size: 1.1em;
	font-weight: bold;
	margin-top: 15px;
	overflow: hidden;
}
.skillDescription {
	width: 100%;
	margin-top: 20px;
	margin-bottom: 10px;
	font-size: 1em;
	text-align: center;
	overflow: hidden;
}
.tools {
	position: absolute;
	top: 0px;
	right: 0px;
	font-size: 1em;
	display: flex;
	flex-direction: row;
}
.connector {
	cursor: pointer;
	padding: 10px;
}
.menu {
	cursor: pointer;
	padding: 10px;
	transition: all .1s ease-in-out;
}
.fa-bars:hover {
	transform: scale(1.1);
	-webkit-transform: scale(1.1);
}
.menuContainer {
	position: absolute;
	top: 80px;
	right: 0;
	padding: 10px;
	display: flex;
	flex-direction: column;
}
.menuLink {
	cursor: pointer;
	display: flex;
	justify-content: right;
	margin-bottom: 15px;
}

.optionsContainer {
	display: flex;
	align-content: center;
	justify-content: center;
}

.footer {
	position: fixed;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 10;
	background-color: var(--secondary);
	height: 90px;
	padding: 15px;
	box-sizing: border-box;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
}

.tracking {
	font-size: 0.9em;
	margin-top: 10px;
	font-family: var(--readable);
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-content: center;
	justify-items: center;
	align-items: center;
}

.cookies {
	font-size: 1.33em;
	font-family: var(--readable);
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-content: center;
	align-items: center;
	justify-items: center;
}

.textWithMargin {
	margin: 0 10px 0 10px;
}

.acceptCookies {
	color: var(--hover);
}

.noCookies {
	position: fixed;
	right: 50px;
	bottom: 22px;
}

.fade-enter-active,
.fade-leave-active {
	transition: opacity 1.5s
}

.fade-enter,
.fade-leave-to {
	opacity: 0
}

.red {
	color: red;
}

